--- a/src/main/java/com/qa/config/config.properties
+++ b/src/main/java/com/qa/config/config.properties
@@ -1,3 +1,3 @@
-URL = https://reqres.in
-serviceURL = /api/users
+URL = https://r8alxaspi1.execute-api.ap-southeast-2.amazonaws.com/
+serviceURL = api/ezypay/login
 
